# multiagent-gcs

./: pyproject.toml
multiagent_gcs/: run_gcs_single_agent.py
multiagent_gcs/gcs_lib/: FreespacePolytopes.py  GraphOfConvexSets.py  plotting.py
